# p2a

./: .copier-answers.yaml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
p2a/: __init__.py  model.py
p2a/tests/: test_all.py  test_model.py
